src/styles.css
/* ... */
p, a, ul, li, span{
  font-family: "Roboto Condensed", serif;
  font-optical-sizing: auto;
    cursor: default;
}
section{
  padding: 0 100px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

/* Navbar Styles */
.navbar {
    background: rgba(0, 0, 0, 0.7);
    backdrop-filter: blur(8px);    
    color: #F7F7F8;
    padding: 20px 100px;
    position: fixed;
    display: flex;
    justify-content: space-between;
    align-items:center;
    width: 100%;
    top: 0;
    left: 0;
    z-index: 1000;
  }
  
  .navbar-container {
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 1200px;
    margin-right: 200px;
  }

  .logo img{
    height: 30px;
  }
  
  .nav-links {
    list-style: none;
    display: flex;
    gap: 20px;
  }
  
  .nav-links li a {
    text-decoration: none;
    color: #F7F7F8;
    transition: color 0.3s ease;
    cursor: pointer;
  }
  
  .nav-links li a:hover {
    color: #4E31AA;
  }
  
  /* Mobile Menu Button */
  .mobile-menu {
    display: none;
    background: none;
    border: none;
    cursor: pointer;
    color: #F7F7F8;
    padding-left: 280px;
  }
  
  /* Mobile Navigation */
  .mobile-nav {
    position: fixed;
    top: 0;
    right: -100%;
    width: 80%;
    height: 100vh;
    background: #0e0e0e;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 60px;
    padding-right: 80px;
    transition: right 0.4s ease-in-out;
    z-index: 1100;
  }
  
  .mobile-nav.open {
    right: 0;
  }
  
  .mobile-nav ul {
    list-style: none;
    text-align: center;
    padding: 0;
  }
  
  .mobile-nav li {
    margin: 20px 0;
  }
  
  .mobile-nav a {
    text-decoration: none;
    color: #F7F7F8;
    font-size: 1.5rem;
    transition: color 0.3s ease;
  }
  
  .mobile-nav a:hover {
    color: #4E31AA;
  }
  
  /* Close Button */
  .close-menu {
    position: absolute;
    top: 15px;
    right: 220px;
    background: none;
    border: none;
    color: #F7F7F8;
    cursor: pointer;
  }
  
  /* Background Overlay */
  .overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background: rgba(0, 0, 0, 0.6);
    z-index: 1000;
    transition: opacity 0.4s ease-in-out;
  }
 /* Progress Bar */
.progress-bar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%; /* Full width to allow scaling from center */
  height: 5px;
  background-color: #4E31AA;
  z-index: 9999;
}


  
  
  /* Responsive Design for Nav Bar */
  @media screen and (max-width: 768px) {
    
    .nav-links {
      display: none;
    }
    .mobile-menu {
      display: block;
      
    }
  }
  
 /* Hero Section */
.hero {
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #0e0e0e;
    color: #F7F7F8;
    padding: 25px 100px;
   
  }
  

  
  .hero-container {
    display: flex;
    align-items:last baseline;
    text-align: center;
    justify-content: space-between;
    opacity: 1;
    
  }
  
  
  .hero-title {
    font-size: 6rem;
    font-weight: bold;
    margin-bottom: 20px;
    text-align: left;
    opacity: 1;
  }
  

  .hero-subtitle {
    font-size: 2rem;
    margin-bottom: 30px;
    text-align: right;
    opacity: 1;
    
  }
  .hero-para{
    font-size: 1.5rem;
    color: #F7F7F8;
  }
  
  /* Scroll Arrow */
  .scroll-arrow {
    display: inline-block;
    width: 50px;
    height: 50px;
    margin-top: 20px;
    cursor: pointer;
    transition: transform 0.3s ease, color 0.3s ease;
  }
  
  .scroll-arrow:hover {
    transform: translateY(5px);
    color: #4E31AA;
    transition: transform 0.3s ease, color 0.3s ease;
  }
  

  
  /* Responsive Design  for Hero Section*/
  @media screen and (max-width: 1024px) {
    .hero{
        height: 100vh;
        padding: 10px 100px;
    }
    .hero-title {
      font-size: 4rem;
    }
  
    .hero-subtitle {
      font-size: 2rem;
    }
  
    .scroll-arrow {
      margin-top: 0px;
    }
  }
  
  @media screen and (max-width: 768px) {
    .hero-container {
      flex-direction: column;
      justify-content: center;
      align-items: center;
    }
    .hero-title {
      font-size: 3rem;
      text-align: center;
    }
  
    .hero-subtitle {
      font-size: 1.5rem;
      text-align: center;
    }
    .hero-para {
      font-size: 1rem;
      text-align: center;
    }
    
  }
  span{
    color: #4E31AA;
  }


 /* Skills Section */
.skills {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 80px 40px 20px 40px;
    margin: 0;
}


.skills-title{
    font-size: 6rem;
    color: #4E31AA;
    margin-bottom: 0;
}
.skills-subtitle{
    font-size: 2rem;
    margin-top: 0;
}
.skills-title-container{
    display: flex;
    flex-direction: column;
    justify-content:center;
    align-items:flex-end;
}
.skills-container {
    width: 70%;
    height: 20vh;
    background-color: #0e0e0e;
    border-radius: 20px;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    margin-bottom: 20px;
}

/* Scroll Wrapper */
.scroll-wrapper {
    width: 100%;
    overflow: hidden;
    white-space: nowrap;
}

/* Scrolling Content */
.scroll-content {
    display: flex;
    align-items: center;
    gap: 20px;
    width: max-content;
    animation: scroll-right 15s linear infinite;
}

/* Skill Items */
.skill-item {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100px;
    height: 100px;
    transition: transform 0.3s ease;
    background-color: #F7F7F8;
    border-radius: 20px;
}

.skill-item img {
    width: 70px;
    height: 70px;
}

/* Scale Effect on Hover */
.skill-item:hover {
    transform: scale(1.1);
}

/* Rightward Scrolling Animation */
@keyframes scroll-right {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(-50%);
    }
}
/* ... */

